# constellation-engine

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  default_env.tres  explicit-build.rs  imgui.ini  project.godot
base/: Cargo.toml
base/src/: lib.rs  star.rs
base/src/project/: config.rs  data.rs  mod.rs  view.rs
celestial/billboard/: gradient.tres  test_blackhole.tscn
celestial/blackhole/: blackhole.tscn  blackhole_shader.tres
celestial/screenshots/: blackhole_screenshot.tscn  camera.gd  earth.tres  earth_shader.tres  gradient.tres  star.tres  test.tscn  test_blackhole.tscn
celestial/star/: star.tscn  star_shader.tres
classes/: system_context.gd
crates/core/: Cargo.toml
crates/core/src/: app.rs  ecs.rs  lib.rs  plugin.rs
crates/core/src/app/: mod.rs
crates/core/src/components/: mod.rs
crates/core/src/mode/: new.rs
crates/core/src/mode/open/: mod.rs
crates/core/src/render/: camera.rs
crates/core/src/render/mesh/: cube_sphere.rs
crates/core/src/render/universe/: bloom.rs  star.rs
crates/core/src/render/universe/shaders/: bloom.wgsl  star_rays.wgsl
crates/core/src/utils/: mod.rs
crates/starlight/: Cargo.toml
crates/starlight/src/: archetype.rs  batch.rs  bundle.rs  column.rs  command_buffer.rs  entities.rs  entity_builder.rs  lib.rs  query.rs  world.rs
crates/starlight/src/old/v1/: archetype.rs  borrow.rs  bundle.rs  column.rs  command_buffer.rs  entities.rs  entity_builder.rs  entity_ref.rs  identifier.rs  lib.rs  query.rs  query_one.rs  sparse.rs  world.rs
crates/starlight/src/old/v2/: archetype.rs  borrow.rs  entity.rs  lib.rs  world.rs
editor/: Cargo.toml
editor/assets/shaders/: star.wgsl
editor/src/: main.rs
editor/src/app/frame/: composite.wgsl  mod.rs
editor/src/bevy_star/: normal.rs
editor/src/components/: camera.rs  star.rs  transform.rs
editor/src/render/: mod.rs
editor/src/render/universe/: bloom.rs  mod.rs  star.rs
editor/src/render/universe/shaders/: bloom_down.wgsl  bloom_up.wgsl  composite.wgsl  star.wgsl  star_rays.wgsl  star_rays_compute.wgsl
editor/src/star/: mod.rs
editor/src/ui/: viewport.rs
fonts/: UbuntuFont.res
gdnative/: engine.tres  grav_descriptor.gdns  nbody_star_descriptor.gdns  solve_descriptor.gdns  system_hierarchy.gdns  system_manager.gdns  system_tree.gdns  units_descriptor.gdns
gdnative/engine/: .gitignore  Cargo.toml  example.cesystem
gdnative/engine/engine-sys/: Cargo.toml  bin.rs  build.rs
gdnative/engine/engine-sys/cpp/: .gitignore  CMakeLists.txt  build.bat
gdnative/engine/engine-sys/cpp/src/: constants.hpp  export.hpp
gdnative/engine/engine-sys/cpp/src/generic/: particle.cpp  particle_old.cpp
gdnative/engine/engine-sys/src/: constants.rs  lib.rs
gdnative/engine/engine-sys/src/generic/: particle.rs
gdnative/engine/src/: config.rs  heap.rs  lib.rs
gdnative/engine/src/base/: manager.rs  math.rs  mod.rs  node.rs  record.rs  tree.rs
gdnative/engine/src/global/: mod.rs  name.rs  units.rs
gdnative/engine/src/gravity/: mod.rs  nbody.rs
gdnative/engine/src/new/: mod.rs
gdnative/engine/src/scripts/: grav_descriptor.rs  mod.rs  solve_descriptor.rs  system_hierarchy.rs  system_manager.rs  system_tree.rs  units_descriptor.rs
gdnative/engine/src/system/: manager.rs  mod.rs  node.rs
gdnative/engine/src/system/object/: mod.rs
gdnative/engine/src/system/solver/: mod.rs
gdnative/lib/: .gitignore
main/: main.gd  main.tscn  theme.tres
main/interface/: config.gd  interface.gd  interface.tscn  system.gd  units.gd
main/menu_bar/: help.gd  menu.gd  menu_bar.gd  menu_bar.theme  menu_bar.tscn  solve.gd  system.gd
main/menu_bar/new/: grav.gd
main/views/: empty.tscn  star.tres  view.gd  view.tscn  views.gd  views.tscn
main/views/objects/: red_giant.tres  white_dwarf.tres
native/: CMakeLists.txt
native/solver/: CMakeLists.txt  generic.cpp  vacuum.cpp
native/solver/base/: defines.h  grids.h  nbody.h
native/solver/context/: context.cpp  context.hpp  mesh.cpp  mesh.hpp
native/solver/generic_3d/: solver.cpp  solver_types.h
native/solver/solver/: generic.cpp  post_newtonian.cpp  ring.cpp  vacuum.cpp
native/solver/source/: nbody.cpp  nbody.hpp
native/spacetime/: CMakeLists.txt  entry.cpp  entry.hpp
noise/: simplex3d.tres
src/: app.rs  main.rs  math.rs  new.rs  ring.rs  simulate.rs
src/app/: canvas.rs  mod.rs  render.rs  ui_manager.rs
src/app/frame/: composite.wgsl  mod.rs
src/app/paint/: mod.rs  shader.wgsl
src/components/: star.rs
src/gui/: mod.rs
src/mode/: mod.rs
src/mode/open/: mod.rs
src/mode/test/: mod.rs
src/native/: context.rs  mod.rs  solver.rs  source.rs
src/old/: math.rs
src/old/state/: mod.rs
src/old/ui/: file.rs  misc.rs
src/physics/: mod.rs  scalar.rs
src/physics/initial/: mod.rs
src/project/: mod.rs
src/render/: camera.rs  mod.rs
src/render/mesh/: mod.rs
src/render/paint/: mod.rs  shape.rs
src/render/universe/: bloom.rs  mod.rs  star.rs
src/state/: mod.rs
src/ui/: dialog.rs  file.rs  mod.rs  viewport.rs
src/universe/: camera.rs  mod.rs
src/unused/: canvas.rs  ui_manager.rs
src/utils/: mod.rs
theme/: arrow_down.png.import  arrow_right.png.import  checked.png.import  close.png.import  color_picker_hue.png.import  dropdown.png.import  dummy.png.import  grabber.png.import  grabber_deactivated.png.import  h_tick.png.import  icon_add.png.import  icon_color_pick.png.import  icon_folder.png.import  icon_parent_folder.png.import  icon_reload.png.import  nothing.png.import  off.png.import  old_theme.tres  on.png.import  radiochecked.png.import  radiounchecked.png.import  theme.tres  unchecked.png.import  updown.png.import
viewer/: .gitignore  gdnative.tres  main.tscn  project.godot
viewer/celestial/: milkyway.jpg.import  milkyway_panorama.tres  star.tscn
viewer/gdnative/: Cargo.toml  gdnative_lib.tres  project_manager.gdns
viewer/gui/: folder.png.import  gui.gd  open_project.gd  viewer.png.import
viewer/main/: main.gd  main.tscn
viewer/native/: Cargo.toml
viewer/scripts/: camera.gd  camera_controller.gd  project_manager.gdns
viewport/: camera.gd  viewport.gd
(+42 files in other folders)
