[package]
name = "constellation-engine"
version = "0.1.0"
edition = "2021"
# build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

clap = "2.34.0"
core = { path = "crates/core", version = "0.1.0" }
env_logger = "0.9.0"

[features]
default = ["native"]
native = []

[[bin]]
name = "constellation-engine"
path = "src/main.rs"
test = false
bench = false


[[bin]]
name = "explicit-build"
path = "explicit-build.rs"
test = false
bench = false

[workspace]

members = ["crates/*"]
