[package]
name = "constellation-engine"
version = "0.1.0"
edition = "2021"
# default-run = "constellation-engine"
# build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

constellation-base = { path = "base", version = "0.1.0" }

clap = "3.0.7"
env_logger = "0.9.0"
libloading = "0.7.2"

[features]


[[bin]]
name = "native_build"
path = "native/build.rs"
test = false
bench = false

[workspace]

members = ["crates/*", "base", "editor"]
