[package]
name = "constellation-base"
version = "0.1.0"
edition = "2021"
# build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

clap = "3.0.7"
env_logger = "0.9.0"
glam = { version = "0.20.2", features = ["bytemuck", "serde"] }
num-traits = "0.2"

serde = { version = "1.0.132", features = ["derive"] }
bincode = "1.3.3"
toml = "0.5.8"
