[package]
name = "core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

bytemuck = "1.7.2"
clap = "2.34.0"
egui = "0.16.1"
epaint = "0.16.0"
futures = "0.3.17"
glam = { version = "0.20.2", features = ["bytemuck"] }
log = "0.4.0"
num-traits = "0.2"
wgpu = "0.11.1"
winit = "0.25.0"

starlight = { path = "../starlight", version = "0.1.0" }

serde = { version = "1.0.132", features = ["derive"] }
toml = "0.5.8"
