[package]
name = "starlight"
version = "0.1.0"
edition = "2021"

[features]
default = []
# Enables derive(Bundle)
# macros = ["hecs-macros", "lazy_static"]

[dependencies]
hashbrown = { version = "0.11.0", default-features = false, features = [
    "ahash",
    "inline-more",
] }
lazy_static = { version = "1.4.0", optional = true, features = ["spin_no_std"] }
serde = { version = "1.0.117", default-features = false, optional = true }
spin = { version = "0.9.2", default-features = false, features = [
    "mutex",
    "spin_mutex",
] }

[dev-dependencies]
bencher = "0.1.5"
rand = "0.8.3"
trybuild = "1.0.23"
serde = { version = "1.0.117", features = ["derive"] }
serde_test = "1.0.117"
