[package]
name = "engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

engine-sys = { path = "engine-sys", version = "0.1.0" }
glam = { version = "0.20.2", features = ["bytemuck", "serde"] }
hashbrown = "0.12.0"
thiserror = "1.0"

serde = { version = "1.0.132", features = ["derive"] }
bincode = "1.3.3"
toml = "0.5.8"

[workspace]

members = ["engine-sys"]
